chap 7: Sign Up

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="footer">
   <small>
-    The
+    <%= t ".the" %>
     <%= link_to t(".book"), "https://www.railstutorial.org/" %>
-    by
+    <%= t ".by" %>
     <%= link_to t(".author"), "http://www.michaelhartl.com/"%>
   </small>
   <nav>
