--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
     <div class="container">
       <%= link_to t("english"), locale: "en" %>
       <%= link_to t("vietnam"), locale: "vi" %>
+      <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
       <%= yield %>
       <%= render "layouts/footer" %>
     </div>
