--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,23 @@
 <% provide :title, t(".title") %>
 <h1><%= t ".signup" %></h1>
-<p><%= t ".content" %></p>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user, url: users_signup_path) do |f| %>
+        <%= render "shared/error_messages" %>
+
+        <%= f.label t ".name" %>
+        <%= f.text_field :name %>
+
+        <%= f.label t ".email" %>
+        <%= f.email_field :email %>
+
+        <%= f.label t ".password" %>
+        <%= f.password_field :password %>
+
+        <%= f.label :password_confirmation, t(".confirmation") %>
+        <%= f.password_field :password_confirmation %>
+
+        <%= f.submit t ".create" %>
+      <% end %>
+  </div>
+</div>
