Chap 5: Filling in the layout

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,4 @@
-<% provide(:title, t(".title")) %>
-<%= link_to "English", locale: "en" %>
-<%= link_to "Vietnamese", locale: "vi" %>
+<% provide :title, t(".title") %>
 <h1><%= t ".contact" %></h1>
 <p>
   <%= t ".content_1" %>
