--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <% provide(:title, t(".title"))%>
-  </head>
-  <body>
-    <%= link_to "English", locale: "en" %>
-    <%= link_to "Vietnamese", locale: "vi" %>
-    <h1><%= t ".home" %></h1>
-    <p>
-      <%= t ".content_1" %>
-      <%= link_to t(".content_2"), "https://www.railstutorial.org/" %>
-      <%= t ".content_3" %>
-    </p>
-  </body>
-</html>
+<% content_for :title, t(".title") %>
+<div class="center jumbotron">
+<h1><%= t ".home" %></h1>
+  <p>
+    <%= t ".content_1" %>
+    <%= link_to t(".content_2"), "https://www.railstutorial.org/" %>
+    <%= t ".content_3" %>
+  </p>
+  <%= link_to t(".signup"), users_signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+<%= link_to image_tag("rails.png", alt: "Rails logo"),
+  "http://rubyonrails.org/" %>
