--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,26 +1,9 @@
 <% provide :title, t(".title") %>
+<% provide :button_text, t(".btn_save") %>
 <h1><%= t ".update_profile" %></h1>
-
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
-      <%= render "shared/error_messages" %>
-
-      <%= f.label t ".name" %>
-      <%= f.text_field :name, class: "form-control" %>
-
-      <%= f.label t ".email" %>
-      <%= f.email_field :email, class: "form-control" %>
-
-      <%= f.label t ".password" %>
-      <%= f.password_field :password, class: "form-control" %>
-
-      <%= f.label t ".confirmation" %>
-      <%= f.password_field :password_confirmation, class: "form-control" %>
-
-      <%= f.submit t ".save" %>
-    <% end %>
-
+    <%= render "form" %>
     <div class="gravatar_edit">
       <%= gravatar_for @user %>
       <a href="http://gravatar.com/emails" target="_blank">change</a>
