--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,9 @@
     <%= link_to t(".content_2"), "https://www.railstutorial.org/" %>
     <%= t ".content_3" %>
   </p>
+  <% unless logged_in? %>
   <%= link_to t(".signup"), users_signup_path, class: "btn btn-lg btn-primary" %>
+  <% end %>
 </div>
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
   "http://rubyonrails.org/" %>
