--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,8 +5,11 @@
       <section class="user_info">
         <%= render "shared/user_info" %>
       </section>
+      <section class="stats">
+        <%= render "shared/stats" %>
+      </section>
       <section class="micropost_form">
-        <%= render "shared/micropost_form" %>
+        <%= render "shared/form" %>
       </section>
     </aside>
     <div class="col-md-8">
