--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,14 @@
         <li><%= link_to t(".home"), static_pages_home_path %></li>
         <li><%= link_to t(".help"), static_pages_help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to t(".users"), "#" %></li>
+          <li><%= link_to t(".users"), users_path %></li>
           <li class="dropdown">
             <%= link_to "#", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
             <%= t ".account" %> <b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu">
               <li><%= link_to t(".profile"), current_user %></li>
-              <li><%= link_to t(".settings"), "#" %></li>
+              <li><%= link_to t(".settings"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t(".logout"), logout_path, method: :delete %>
