--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,16 +6,16 @@
         <%= render "shared/error_messages" %>
 
         <%= f.label t ".name" %>
-        <%= f.text_field :name %>
+        <%= f.text_field :name, class: "form-control" %>
 
         <%= f.label t ".email" %>
-        <%= f.email_field :email %>
+        <%= f.email_field :email, class: "form-control" %>
 
         <%= f.label t ".password" %>
-        <%= f.password_field :password %>
+        <%= f.password_field :password, class: "form-control" %>
 
-        <%= f.label :password_confirmation, t(".confirmation") %>
-        <%= f.password_field :password_confirmation %>
+        <%= f.label t ".confirmation" %>
+        <%= f.password_field :password_confirmation, class: "form-control" %>
 
         <%= f.submit t ".create" %>
       <% end %>
