--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,31 @@
 <% content_for :title, t(".title") %>
-<div class="center jumbotron">
-<h1><%= t ".home" %></h1>
-  <p>
-    <%= t ".content_1" %>
-    <%= link_to t(".content_2"), "https://www.railstutorial.org/" %>
-    <%= t ".content_3" %>
-  </p>
-  <% unless logged_in? %>
-  <%= link_to t(".signup"), users_signup_path, class: "btn btn-lg btn-primary" %>
-  <% end %>
-</div>
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-  "http://rubyonrails.org/" %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/form" %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Micropost Feed</h3>
+      <%= render "shared/feed" %>
+    </div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1><%= t ".home" %></h1>
+      <p>
+        <%= t ".content_1" %>
+        <%= link_to t(".content_2"), "https://www.railstutorial.org/" %>
+        <%= t ".content_3" %>
+      </p>
+      <% unless logged_in? %>
+      <%= link_to t(".signup"), users_signup_path, class: "btn btn-lg btn-primary" %>
+      <% end %>
+  </div>
+  <%= link_to image_tag("rails.png", alt: "Rails logo"),
+    "http://rubyonrails.org/" %>
+<% end %>
