--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,11 @@
   </aside>
   <div class="col-md-8">
     <% if @user.microposts.any? %>
-      <h3>Microposts (<%= @user.microposts.count %>)</h3>
+      <h3><%= @user.microposts.count %> <%= t ".microposts" %></h3>
       <ol class="microposts">
         <%= render @microposts %>
       </ol>
-      <%= paginate @microposts %>
+      <%= paginate @microposts, theme: "twitter-bootstrap-3" %>
     <% end %>
   </div>
 </div>
